--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,15 +15,15 @@ jobs:
         uses: "hacs/action@main"
         with:
           category: "CHANGE_ME!"
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron:  '0 0 * * *'
+# on:
+#   push:
+#   pull_request:
+#   schedule:
+#     - cron:  '0 0 * * *'
 
-jobs:
-  validate:
-    runs-on: "ubuntu-latest"
-    steps:
-        - uses: "actions/checkout@v3"
-        - uses: "home-assistant/actions/hassfest@master"
+# jobs:
+#   validate:
+#     runs-on: "ubuntu-latest"
+#     steps:
+#         - uses: "actions/checkout@v3"
+#         - uses: "home-assistant/actions/hassfest@master"
