--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,29 @@
 name: HACS Action
 
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: "0 0 * * *"
-
-jobs:
-  hacs:
-    name: HACS Action
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: HACS Action
-        uses: "hacs/action@main"
-        with:
-          category: "CHANGE_ME!"
 # on:
 #   push:
 #   pull_request:
 #   schedule:
-#     - cron:  '0 0 * * *'
+#     - cron: "0 0 * * *"
 
 # jobs:
-#   validate:
+#   hacs:
+#     name: HACS Action
 #     runs-on: "ubuntu-latest"
 #     steps:
-#         - uses: "actions/checkout@v3"
-#         - uses: "home-assistant/actions/hassfest@master"
+#       - name: HACS Action
+#         uses: "hacs/action@main"
+#         with:
+#           category: "CHANGE_ME!"
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron:  '0 0 * * *'
+
+jobs:
+  validate:
+    runs-on: "ubuntu-latest"
+    steps:
+        - uses: "actions/checkout@v3"
+        - uses: "home-assistant/actions/hassfest@master"
