--- a/custom_components/ssh/manifest.json
+++ b/custom_components/ssh/manifest.json
@@ -5,5 +5,6 @@
         "requirements": ["paramiko==3.1.0"],
         "dependencies": [],
         "codeowners": ["@blaketenantwatson"],
-        "version":"0.1.0"
+        "version":"0.1.0",
+        "iot_class": "cloud_polling",
 }
