--- a/custom_components/ssh/manifest.json
+++ b/custom_components/ssh/manifest.json
@@ -6,6 +6,6 @@
         "documentation": "https://github.com/blaketenantwatson/ssh_integration",
         "integration_type": "hub",
         "iot_class": "cloud_polling",
-        "requirements": ["paramiko==3.1.0"]
-        
+        "requirements": ["paramiko==3.1.0"],
+        "version": "1.2.0"
 }
