--- a/custom_components/ssh/manifest.json
+++ b/custom_components/ssh/manifest.json
@@ -7,5 +7,6 @@
         "integration_type": "hub",
         "iot_class": "cloud_polling",
         "requirements": ["paramiko==3.1.0"],
-        "version": "1.2.0"
+        "version": "1.2.0",
+        "issue_tracker": "https://github.com/blaketenantwatson/ssh_integration/issues"
 }
