--- a/custom_components/ssh/manifest.json
+++ b/custom_components/ssh/manifest.json
@@ -6,7 +6,7 @@
         "documentation": "https://github.com/blaketenantwatson/ssh_integration",
         "integration_type": "hub",
         "iot_class": "cloud_polling",
+        "issue_tracker": "https://github.com/blaketenantwatson/ssh_integration/issues",
         "requirements": ["paramiko==3.1.0"],
-        "version": "1.2.0",
-        "issue_tracker": "https://github.com/blaketenantwatson/ssh_integration/issues"
+        "version": "1.2.0"
 }
